# Practice-Python

./: .gitignore  README.md  pyproject.toml
Codewars/: README.md
docs/source/: conf.py  index.rst
practice_python/: profiler.py  runner.py
practice_python/codewars/: unsorted_katas.py
practice_python/codewars/5kyu/: calculating_with_functions.py  maximum_subarray_sum.py  sum_pairs.py
practice_python/other/: aardvark_lessons.py
tests/: conftest.py  context.py  test_poetry_template.py
tests/other/: test_aardvark_lessons.py
