[tool.poetry]
name = "practice-python"
version = "0.0.1"
description = "For practicing Python algorithms."

license = "MIT"
authors = ["Mislav Jaksic <jaksicmislav@gmail.com>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/MislavJaksic/Practice-Python"
repository = "https://github.com/MislavJaksic/Practice-Python"
documentation = "https://github.com/MislavJaksic/Practice-Python"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
black = "^19.10b0"
pytest = "^5.2"
sphinx = "^2.3.1"

[tool.poetry.scripts]
practice-python = "practice_python.runner:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
